# projekt-hohn

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0a4be665e23c_seed_value_definitions.py  1fd217e3b845_portfolios.py  2f3e13c34904_llm_conv_per_period.py  3472d1569d29_companies.py  3c3d51e15cde_users.py  82bf9e484a46_value_definitions_and_company_values.py  96acdd6be79e_llm_conversations_and_messages.py  a1b2c3d4e5f6_llm_unique_conv_source_field.py  (+9 more)
backend/app/auth/: deps.py  models.py  routes.py  schemas.py  security.py
backend/app/calculations/: engine.py
backend/app/companies/: __init__.py  isin.py  lookup.py  models.py  routes.py  schemas.py
backend/app/fx/: routes.py
backend/app/llm/: __init__.py  claude.py  models.py  rate_limiter.py  routes.py  schemas.py
backend/app/portfolios/: __init__.py  models.py  routes.py  schemas.py
backend/app/providers/: base.py  registry.py  yahoo.py
backend/app/values/: __init__.py  always_current.py  catalog.py  currency_keys.py  models.py  progress.py  routes.py  schemas.py
backend/scripts/: create_user.py  migrate_dividend_return.py
backend/tests/: conftest.py  test_auth.py  test_calculations.py  test_companies.py  test_isin.py  test_llm.py  test_lookup.py  test_main.py  test_portfolios.py  test_progress.py  test_rate_limiter.py  test_security.py  test_value_parsing.py  test_values.py  test_yahoo_provider.py
frontend/: index.html  (+4 more)
(+25 files in other folders)
