[project]
name = "hohn-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "email-validator>=2.3.0",
    "yfinance>=0.2.40",
    "cachetools>=7.0.5",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-postgresql>=6",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
